--- a/src/docs/_table.scss
+++ b/src/docs/_table.scss
@@ -1,11 +1,28 @@
-.ui-html-table{
-    width: 100%;
-    border-collapse: collapse;  
-    th, td{
-        padding: getSpacing('4x');
-        border-bottom: 1px solid rgba($black, 0.1);
-    }
-    th{
-        text-align: left;
-    }
+table {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td,
+th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+tr:hover {
+  background-color: #ddd;
+  cursor: pointer;
+}
+
+th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: getColor("primary.base");
+  color: getColor("white.base");
 }
