LFUNIOLD-227: Add dialog component

--- a/src/assets/sass/components/form/_button.scss
+++ b/src/assets/sass/components/form/_button.scss
@@ -55,6 +55,15 @@
       color: getColor("secondary.base");
     }
   }
+
+  @include m(danger) {
+    background: getColor("danger.base");
+    color: getColor("white.base");
+
+    &:hover {
+      color: getColor("secondary.base");
+    }
+  }
 }
 
 .btn-outlined {
