--- a/src/docs/docs.scss
+++ b/src/docs/docs.scss
@@ -2,6 +2,7 @@
 @import "table";
 @import "guide";
 @import "navbar";
+@import "dialog";
 
 body {
   background: getColor("secondary.lighter") !important;
@@ -70,6 +71,7 @@ code {
 
 .guide-content {
   flex: 1;
+  padding: 24px;
   @include e(inner) {
     padding-top: 120px;
   }
@@ -390,4 +392,14 @@ input[type="submit"]:hover {
 .well__content {
   border-bottom: 1px solid #e6e6e6;
   margin-bottom: 16px;
+}
+
+.patient-profile {
+  @include e(content) {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 16px;
+    gap: 12px;
+  }
 }
