LFUNIOLD-227: Refactor table search part in profile page and also add event in delete pop up

--- a/src/assets/sass/components/form/_button.scss
+++ b/src/assets/sass/components/form/_button.scss
@@ -64,6 +64,15 @@
       color: getColor("secondary.base");
     }
   }
+
+  @include m(success) {
+    background: getColor("success.base");
+    color: getColor("white.base");
+
+    &:hover {
+      color: getColor("secondary.base");
+    }
+  }
 }
 
 .btn-outlined {
