LFUNIOLD-227: Add styling for login, signup and navbar

--- a/src/assets/sass/variables/_color.scss
+++ b/src/assets/sass/variables/_color.scss
@@ -2,7 +2,7 @@
 $white: #ffffff !default;
 $black: #000000 !default;
 
-$primary: #4b49ac !default;
+$primary: #079d49 !default;
 $secondary: #98bdff !default;
 
 $green: #249f5d !default;
