--- a/src/docs/docs.scss
+++ b/src/docs/docs.scss
@@ -17,40 +17,6 @@ code {
 }
 
 //Navbar
-.navbar {
-  padding: 20px 0;
-  background-color: getColor("white.base");
-  color: getColor("primary.base");
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 1;
-  border: 1px solid getColor("grey.7");
-
-  @include e(header) {
-    h1 {
-      font-size: 16px;
-      color: getColor("primary.base");
-    }
-  }
-
-  @include e(flex) {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  @include m(sticky) {
-    position: sticky;
-    top: 0;
-    z-index: 2;
-  }
-
-  @include e(left) {
-    display: flex;
-    align-items: center;
-  }
-}
 
 //Sidebar
 .sidebar {
@@ -381,6 +347,14 @@ input[type="submit"]:hover {
   font-size: 12px;
 }
 
+.main-body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
+
 .well {
   width: 100%;
   background-color: #fff;
@@ -389,11 +363,39 @@ input[type="submit"]:hover {
   border: 1px solid #e6e6e6;
 }
 
+.well--md {
+  width: 450px;
+  padding: 36px 24px;
+}
+
 .well__content {
   border-bottom: 1px solid #e6e6e6;
   margin-bottom: 16px;
 }
 
+.signup-content {
+  margin-top: 16px;
+  text-align: center;
+  font-weight: 500;
+}
+.signup-content a {
+  text-decoration: underline;
+}
+.main-body__content {
+  margin-top: 16px;
+}
+
+.subtitle {
+  font-size: 12px;
+  line-height: 16px;
+  margin-top: 8px;
+  display: block;
+  color: #676464;
+}
+
+.w--100 {
+  width: 100%;
+}
 .patient-profile {
   @include e(content) {
     display: flex;
