--- a/src/docs/_table.scss
+++ b/src/docs/_table.scss
@@ -23,6 +23,6 @@ th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
-  background-color: getColor("primary.base");
-  color: getColor("white.base");
+  background-color: getColor("white.base");
+  color: getColor("grey.8");
 }
