--- a/src/docs/docs.scss
+++ b/src/docs/docs.scss
@@ -319,14 +319,20 @@ label {
 }
 input[type="text"],
 input[type="email"],
+input[type="date"],
+input[type="password"],
 select {
   width: 100%;
-  padding: 12px 20px;
+  padding: 12px 12px;
   margin: 8px 0;
   display: inline-block;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
+}
+input[type="date"] {
+  width: 50%;
+  display: block;
 }
 
 input[type="submit"] {
@@ -342,6 +348,17 @@ input[type="submit"] {
 
 input[type="submit"]:hover {
   background-color: #45a049;
+}
+.radio-group {
+  display: flex;
+  gap: 18px;
+  align-items: center;
+  margin-top: 12px;
+}
+.radio-button {
+  display: flex;
+  gap: 12px;
+  align-items: center;
 }
 
 .form-group {
