--- a/src/docs/docs.scss
+++ b/src/docs/docs.scss
@@ -375,6 +375,9 @@ input[type="submit"]:hover {
   align-items: center;
   width: 100%;
   height: 100vh;
+  background: #c9d6ff; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #e2e2e2, #c9d6ff);
+  background: linear-gradient(to right, #e2e2e2, #c9d6ff);
 }
 
 .well {
