--- a/src/assets/sass/components/form/_button.scss
+++ b/src/assets/sass/components/form/_button.scss
@@ -22,6 +22,7 @@
   justify-content: center;
   font-weight: inherit;
   border-radius: 6px;
+  line-height: 21px;
 
   &:disabled {
     cursor: not-allowed;
