--- a/src/docs/_table.scss
+++ b/src/docs/_table.scss
@@ -1,5 +1,5 @@
 table {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 100%;
 }
