--- a/src/docs/_navbar.scss
+++ b/src/docs/_navbar.scss
@@ -22,12 +22,27 @@
     }
   }
 
-  @include e(item) {
+  @include e(list) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
     background: #eaeaff;
-    color: black;
-    font-weight: 600;
     padding: 16px;
     border-radius: 10px;
+
+    .avatar-img {
+      display: block;
+      width: 30px;
+      height: 30px;
+      background-color: getColor("primary.base");
+      border-radius: 50%;
+    }
+  }
+
+  @include e(item) {
+    color: black;
+    font-weight: 600;
   }
 
   @include e(flex) {
