Add patient detail page and its styling and also update in env page

--- a/src/assets/sass/components/form/_button.scss
+++ b/src/assets/sass/components/form/_button.scss
@@ -66,6 +66,15 @@
     }
   }
 
+  @include m(view) {
+    background: getColor("secondary.base");
+    color: getColor("grey.base");
+
+    &:hover {
+      color: getColor("secondary.base");
+    }
+  }
+
   @include m(success) {
     background: getColor("success.base");
     color: getColor("white.base");
